added innregular transportation in main

--- a/src/assets/layouts/mainStyles.scss
+++ b/src/assets/layouts/mainStyles.scss
@@ -2,6 +2,13 @@
     color: #960909;
     margin-left: 2px;
 }
+
 .blackSpan {
     color: black;
+}
+
+.mainTitle {
+    text-align: center;
+    color: #243949;
+    font-size: 32px;
 }
