--- a/src/assets/layouts/mainStyles.scss
+++ b/src/assets/layouts/mainStyles.scss
@@ -14,6 +14,15 @@
     color: #243949;
 }
 
+.divider {
+    border: 1px solid rgba(8, 88, 149, 0.2);
+}
+
+.signInTextStyle {
+    font-size: 16px;
+    color: #085895;
+}
+
 .mainTitle {
     text-align: center;
     color: #243949;
