--- a/src/assets/layouts/mainStyles.scss
+++ b/src/assets/layouts/mainStyles.scss
@@ -28,7 +28,13 @@
     color: #243949;
     font-size: 32px;
 }
-
+.mainTitleMobile {
+    text-align: center;
+    color: #243949;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'SeoulHangang';
+}
 .pointer {
     cursor: pointer;
 }
@@ -49,6 +55,22 @@
     position: absolute;
     width: 60px;
     height: 70px;
+    border-bottom: 2px solid #085895;
+    border-right: 2px solid #085895;
+}
+
+.irregularTransportationBorderTopLeftMobile {
+    position: absolute;
+    width: 20px;
+    height: 30px;
+    border-top: 2px solid #085895;
+    border-left: 2px solid #085895;
+}
+
+.irregularTransportationBorderBottomRightMobile {
+    position: absolute;
+    width: 20px;
+    height: 30px;
     border-bottom: 2px solid #085895;
     border-right: 2px solid #085895;
 }
