--- a/src/assets/layouts/mainStyles.scss
+++ b/src/assets/layouts/mainStyles.scss
@@ -10,6 +10,7 @@
 .blueSpan {
     color: #085895;
 }
+
 .darkBlueSpan {
     color: #243949;
 }
@@ -28,6 +29,7 @@
     color: #243949;
     font-size: 32px;
 }
+
 .mainTitleMobile {
     text-align: center;
     color: #243949;
@@ -35,6 +37,7 @@
     font-weight: 400;
     font-family: 'SeoulHangang';
 }
+
 .pointer {
     cursor: pointer;
 }
@@ -73,4 +76,23 @@
     height: 30px;
     border-bottom: 2px solid #085895;
     border-right: 2px solid #085895;
+}
+
+.formTitle {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.1em;
+    color: #085895;
+    margin-top: 23px;
+}
+
+.formAddNewSpan {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.1em;
+    color: #085895;
+    margin-left: 5px;
+    cursor: pointer;
 }
