added create and update about us

--- a/src/assets/layouts/mainStyles.scss
+++ b/src/assets/layouts/mainStyles.scss
@@ -96,3 +96,9 @@
     margin-left: 5px;
     cursor: pointer;
 }
+
+.errorMessage {
+    color: #ff5252;
+    margin-left: 10px;
+    font-size: 12px;
+}
